// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot assertions fail by throwing 1`] = `0.9360206344712325`;

exports[`Snapshot assertions work when using expect.any to ignore certain properties 1`] = `
Object {
  "cool": "string",
  "random": Any<Number>,
}
`;

exports[`async tests with snapshots work 1`] = `
Object {
  "before": "sleep",
}
`;

exports[`async tests with snapshots work 2`] = `
Object {
  "after": "sleep",
}
`;

exports[`expect works 1`] = `
Array [
  Object {
    "that": "this",
  },
]
`;

exports[`multiple snapshots in one test work 1`] = `
Object {
  "foo": "bar",
}
`;

exports[`multiple snapshots in one test work 2`] = `
Object {
  "bar": "foo",
}
`;
